style: add initial style guide in project

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,15 +1,20 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root{
   --bg-color: #FFFFFF;
   --surface-color: #F5F5F5;
   --skeleton-color: #D9D9D9;
-  --shape-tranparency: #FFFFFF;
+  --shape-tranparency: #ffffff91;
   --brand-color: #EF5F4C;
   --text-color-primary: #313131;
   --text-color-secundary: #6C6C6C;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body{
+  color: var(--text-color-secundary);
+  background-color: var(--bg-color);
 }
